<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/toolbarRl"
        android:orientation="horizontal"
        android:background="@drawable/shape_toolbar01">

        <ImageButton
            android:layout_margin="5dp"
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_keyboard_backspace_24"
            android:contentDescription="@string/back"/>

        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/reset_password"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/input_your_credentials"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:orientation="vertical"
            android:layout_marginRight="2dp">

            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/baseline_mail_24"
                    android:drawablePadding="@dimen/activity_horizontal_margin"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:autofillHints="Email" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Reset Button -->
            <Button
                android:id="@+id/resetBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_button01"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>