<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
                android:id="@+id/profile_pic_section"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="100dp"
                android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/baseline_person_2_24"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/styleCircleImage"
                app:strokeColor="@color/dark_grey"
                app:strokeWidth="1dp"
                android:contentDescription="profile picture" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_pic_section"
        android:layout_marginTop="-50dp"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        >

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/usernameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jennie Kim"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:text="jennieKim@gmail.com"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/textLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:baselineAligned="false">

                <!-- First Column -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Account"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:id="@+id/accountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:text="User"
                        android:textSize="12sp"/>
                </LinearLayout>

                <!-- Second Column -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Joined"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:id="@+id/joinedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:text="08/05/2021"
                        android:textSize="12sp"/>
                </LinearLayout>

                <!-- Third Column -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Posts"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:id="@+id/postsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:text="3"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:dividerThickness="3dp"
                android:layout_marginVertical="5dp"
                app:dividerColor="@color/white_grey"/>

            <LinearLayout
                android:id="@+id/buttonLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="3"
                android:layout_below="@id/textLinearLayout"
                >

                <Button
                    android:id="@+id/btnFragmentPosts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/posts"
                    android:textAlignment="center"
                    android:background="@drawable/button_category"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="loadFragment1" />

                <Button
                    android:id="@+id/btnFragmentFavourite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/favourite"
                    android:textAlignment="center"
                    android:background="@drawable/button_category"
                    android:layout_marginEnd="10dp"
                    android:onClick="loadFragment2" />

                <Button
                    android:id="@+id/btnFragmentLike"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/like"
                    android:textAlignment="center"
                    android:background="@drawable/button_category"
                    android:layout_marginEnd="10dp"
                    android:onClick="loadFragment2" />

            </LinearLayout>
            <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="300dp"
            android:maxHeight="300dp"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
